--- a/src/main/resources/approximation.properties
+++ b/src/main/resources/approximation.properties
@@ -1,13 +1,12 @@
-task.epochs=1000
-task.layers=2
-task.neurons=20,1
-task.functions=org.kornicameister.iad.neuralnet.function.LinearFunction(0.7;0),org.kornicameister.iad.neuralnet.function.SigmoidalUnipolarFunction(0.5)
-task.random=-0.7,0.7
-task.momentum=0.5
-task.learningFactor=0.7
+task.epochs=50000
+task.layers=3
+task.neurons=1,12,1
+task.functions=org.kornicameister.iad.neuralnet.function.LinearFunction(1.0;0.0),org.kornicameister.iad.neuralnet.function.SigmoidalUnipolarFunction(0.7),org.kornicameister.iad.neuralnet.function.LinearFunction(1.;0)
+task.random=-0.5,0.5
+task.momentum=0.00001
+task.learningFactor=0.005
 task.dataDir=report/approximation
 task.out.err=error.txt
 task.out.data=data.txt
 approx.test=approximation_test.txt
-approx.train.1=approximation_train_1.txt
-approx.train.2=approximation_train_2.txt
+approx.train=approximation_train_1.txt
