--- a/src/main/resources/task.properties
+++ b/src/main/resources/task.properties
@@ -1,4 +1,5 @@
-task.epochs=50000
+task.name=approximation
+task.epochs=10
 task.layers=3
 task.neurons=1,12,1
 task.functions=org.kornicameister.iad.neuralnet.function.LinearFunction(1.0;0.0),org.kornicameister.iad.neuralnet.function.SigmoidalUnipolarFunction(0.7),org.kornicameister.iad.neuralnet.function.LinearFunction(1.;0)
@@ -8,5 +9,11 @@ task.learningFactor=0.005
 task.dataDir=report/approximation
 task.out.err=error.txt
 task.out.data=data.txt
+
+#approximation specific
 approx.test=approximation_test.txt
 approx.train=approximation_train_1.txt
+
+#classification specific
+
+#transformation specific
