tested with/without batch got more generic network building

--- a/src/main/resources/batch.properties
+++ b/src/main/resources/batch.properties
@@ -2,3 +2,4 @@
 batch=true
 approximation=src/main/resources/task_a.properties
 classification=src/main/resources/task_c.properties
+transformation=src/main/resources/task_t.properties
