--- a/src/main/resources/task_c.properties
+++ b/src/main/resources/task_c.properties
@@ -1,6 +1,9 @@
 task.name=classification
-task.epochs=40000
+task.bias=true
+task.epochs=10000
 task.layers=3
+task.output=3
+task.input=2
 task.neurons=1,20,1
 task.functions=org.kornicameister.iad.neuralnet.function.SigmoidalUnipolarFunction(0.7),org.kornicameister.iad.neuralnet.function.SigmoidalUnipolarFunction(0.7),org.kornicameister.iad.neuralnet.function.SigmoidalUnipolarFunction(0.7)
 task.random=-0.5,0.5
@@ -13,7 +16,5 @@ task.out.data=data.txt
 #classification specific
 classification.test=classification_test.txt
 classification.train=classification_train.txt
-classification.inputs=2
-classification.outputs=3
 classification.columns=2,3
 classification.out.err=error_classification.txt
