--- a/src/main/resources/task_t.properties
+++ b/src/main/resources/task_t.properties
@@ -1,4 +1,6 @@
 task.name=transformation
+task.output=4
+task.input=4
 task.epochs=5000
 task.layers=3
 task.neurons=4,2,4
@@ -9,6 +11,7 @@ task.learningFactor=0.5
 task.dataDir=report/transformation
 task.out.err=error.txt
 task.out.data=data.txt
+task.bias=true
 
 #classification specific
 transformation.data=transformation.txt
